@@ -293,8 +293,10 @@ public:
 
 // implementation methods
 private:
+	BOOL GetOptionInt(LPCTSTR name) const;
 	BOOL GetOptionBool(LPCTSTR name) const;
 	bool GetBreakType() const;
+	bool GetByteColoringOption() const;
 
 // Implementation data
 protected:
